# wincast-suite

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/wincast-capture/: Cargo.toml
crates/wincast-capture/src/: error.rs  lib.rs  model.rs  session.rs  wait.rs  windows_impl.rs
crates/wincast-capture/tests/: capture.rs
crates/wincast-client/: Cargo.toml
crates/wincast-client/src/: cli.rs  errors.rs  lib.rs  main.rs  render_loop.rs  runtime.rs  runtime_tests.rs  stream.rs  test_support.rs
crates/wincast-host/: Cargo.toml
crates/wincast-host/src/: agent.rs  agent_runtime.rs  input.rs  lib.rs  main.rs  monitor_power.rs  program.rs  service.rs  service_agent.rs  service_ipc.rs  session_events.rs  session_state.rs  window.rs
crates/wincast-host/src/agent/: capture.rs  capture_tests.rs  input_tests.rs  listener.rs  listener_tests.rs  mod.rs  session.rs  session_tests.rs  stream.rs  stream_tests.rs  tests.rs
crates/wincast-host/src/service_agent/: tests.rs
crates/wincast-input/: Cargo.toml
crates/wincast-input/src/: input.rs  lib.rs
crates/wincast-input/src/input/: error.rs  injector.rs  mapping.rs  sdl_virtual_key.rs  sink.rs  types.rs
crates/wincast-input/tests/: input_mapping.rs
crates/wincast-media/: Cargo.toml  THIRD_PARTY.md
crates/wincast-media/src/: decoder.rs  encoder.rs  lib.rs
crates/wincast-media/tests/: decoder_boundary.rs  encoder_boundary.rs  media_boundary.rs  openh264_runtime.rs
crates/wincast-protocol/: Cargo.toml
crates/wincast-protocol/src/: config.rs  frame.rs  handshake.rs  input.rs  ipc.rs  lib.rs  message.rs  raw_frame.rs
crates/wincast-protocol/tests/: config.rs  frame.rs  handshake.rs  ipc.rs  message.rs
crates/wincast-render/: Cargo.toml
crates/wincast-render/src/: lib.rs  sdl.rs
crates/wincast-unity-native/: Cargo.toml
crates/wincast-unity-native/src/: config.rs  error.rs  ffi.rs  frame.rs  input.rs  lib.rs  runtime.rs  session.rs
crates/wincast-unity-native/tests/: ffi_boundary.rs  session_boundary.rs
docs/: current-status.md  deployment-prep.md  design.md  development.md  smoke-test.md
docs/plans/: 2026-05-22-客户端全屏启动体验计划.md  2026-05-22-整屏远控重构计划.md  2026-06-21-Unity内嵌远控后端实施计划.md  2026-06-21-Unity内嵌远控后端设计.md
docs/reviews/: 2026-05-14-Rust工程评审.md  2026-05-16-Rust工程评审.md  2026-05-17-Rust工程评审.md  2026-05-22-Rust工程评审.md
examples/: client.toml  host.toml  wincast-host.toml
scripts/windows/: install-host-startup.bat
unity/com.zoranner.wincast/: README.md  package.json
unity/com.zoranner.wincast/Runtime/: WinCastUnityAgent.cs  Zoranner.WinCast.asmdef
unity/com.zoranner.wincast/Runtime/Capture/: FinalFrameCapture.cs  FrameReadbackQueue.cs
unity/com.zoranner.wincast/Runtime/Input/: RemoteInputAdapter.cs  RemoteInputGateway.cs  UiEventDispatcher.cs
unity/com.zoranner.wincast/Runtime/Native/: WinCastNativeBridge.cs  WinCastNativeTypes.cs
