[workspace]
members = [
    "crates/wincast-protocol",
    "crates/wincast-capture",
    "crates/wincast-host",
    "crates/wincast-client",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.2"
wincast-capture = { path = "crates/wincast-capture" }
wincast-protocol = { path = "crates/wincast-protocol" }
