[workspace]
members = [
    "crates/wincast-protocol",
    "crates/wincast-capture",
    "crates/wincast-media",
    "crates/wincast-render",
    "crates/wincast-input",
    "crates/wincast-host",
    "crates/wincast-client",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sdl2 = "0.37"
thiserror = "2.0.18"
toml = "1.1.2"
wincast-capture = { path = "crates/wincast-capture" }
wincast-input = { path = "crates/wincast-input" }
wincast-media = { path = "crates/wincast-media" }
wincast-protocol = { path = "crates/wincast-protocol" }
wincast-render = { path = "crates/wincast-render" }
