[package]
name = "wincast-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Graphics_Capture",
    "Win32_Foundation",
    "Win32_System_WinRT_Graphics_Capture",
] }
