[package]
name = "wincast-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
wincast-capture.workspace = true
wincast-input.workspace = true
wincast-media.workspace = true
wincast-protocol.workspace = true

[dev-dependencies]
wincast-media = { workspace = true, features = ["test-support"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_RemoteDesktop",
    "Win32_UI_WindowsAndMessaging",
] }
