[package]
name = "wincast-media"
version = "0.1.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
test-support = []

[dependencies]
openh264 = "0.9.3"
thiserror.workspace = true
wincast-protocol.workspace = true

[[test]]
name = "encoder_boundary"
required-features = ["test-support"]

[[test]]
name = "decoder_boundary"
required-features = ["test-support"]
